dfir_rs/tests/compile-fail-stable/surface_source_iter_badtype.rs
../compile-fail/surface_source_iter_badtype.rs